--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,12 +12,29 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v3
+
+      # Install R
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.2'  # You can use another version if needed
+
+      # Install Quarto
       - uses: quarto-dev/quarto-actions/setup@v2
+
+      # Install needed R packages (optional)
+      - name: Install R packages
+        run: |
+          Rscript -e 'install.packages(c("quarto"))'
+
+      # Render site
       - name: Render Quarto Project
         run: quarto render
+
+      # Deploy to GitHub Pages
       - name: Publish to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
+
 
